<resources>
    <string name="app_name">LOS_Demo</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_hint">Enter Address, City or Zip Code</string>
    <string name="heading_origin_hint">Origin Coordinates</string>
    <string name="heading_destination_hint">Destination Coordinates</string>
    <string name="heading_hint">Heading:</string>
    <string name="calculate_heading">Calculate Heading</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type">Map Type</string>
    <string name="default_map">Default</string>
    <string name="satellite">Satellite</string>
</resources>
