<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dji.uxsdkdemo.MapsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/calculate_heading"
            android:textColor="#000"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:hint="@string/heading_origin_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="15sp"
            android:imeOptions="actionNext"/>

        <ImageView
            android:id="@+id/more_options_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/more_options_dest"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/dest"
            android:padding="5dp"
            android:src="@drawable/more_options" />



        <AutoCompleteTextView
            android:id="@+id/dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin"
            android:hint="@string/heading_destination_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="15sp"
            android:imeOptions="actionDone" />

        <ImageView
            android:id="@+id/more_options_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/more_options_origin"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/more_options" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dest"
            android:text="@string/heading_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_cancel"/>

    </RelativeLayout>



</RelativeLayout>